# cpp_cgns

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  README.md  c_interop.cpp  cgns_vector.hpp  cpp_cgns.dg  cpp_cgns.hpp  cpp_cgns_utils.hpp  elements_utils.cpp  sids_manip.cpp  sids_utils.cpp
__unused/: c_interop.hpp
cpp_cgns/: CMakeLists.txt  allocator.hpp  array.hpp  array_types.hpp  array_utils.hpp  buffer.hpp  buffer_allocator.hpp  buffer_base.hpp  buffer_vector.hpp  cgns.cpp  cgns.hpp  cgns.old.hpp  cgns2.hpp  cgns_allocator.hpp  cgns_fwd.hpp  cgns_test.hpp  cgns_test_0.hpp  cgns_test_1.hpp  cgns_vector.hpp  cgnslib.h  cgnslib.hpp  container_utils.hpp  containers_and_views.hpp  containers_utils.hpp  cpp_cgns.hpp  cpp_cgns_utils.cpp  cpp_cgns_utils.hpp  data_buffer.hpp  dispatch.hpp  elements_utils.cpp  exception.hpp  md_array.hpp  node_manip.cpp  node_manip.hpp  numpy_config.hpp  pycgns_converter.cpp  sids.hpp  sids_creation.cpp  sids_creation.hpp  sids_manip.hpp  (+6 more)
cpp_cgns/__unused/: c_interop.cpp  dispatch.hpp  numpy_allocator.hpp
cpp_cgns/base/: ctree.hpp  data_type.hpp  data_type_variant.hpp  exception.hpp  md_array.hpp  node_value.cpp  node_value.hpp  node_value_conversion.hpp  tree.cpp  tree.hpp
cpp_cgns/base/test/: node_value.test.cpp  node_value_conversion.test.cpp  tree.test.cpp
cpp_cgns/interop/: c_interop.cpp  node_value_conversion.cpp  node_value_conversion.hpp  py_cpp_cgns.cpp  py_tree.cpp  py_tree.hpp  pycgns_converter.cpp  pycgns_converter.hpp
cpp_cgns/interop/embed_python/: interpreter.cpp  interpreter.hpp
cpp_cgns/interop/test/: doctest_pybind.hpp  doctest_pybind.test.cpp  embedded_interpreter.test.cpp  node_value_conversion.test.cpp  pybind_test_utils.hpp  pybind_test_utils.test.cpp  pycgns_converter.test.cpp
cpp_cgns/sids/: Building_Block_Structure_Definitions.cpp  Building_Block_Structure_Definitions.hpp  Grid_Coordinates_Elements_and_Flow_Solution.cpp  Grid_Coordinates_Elements_and_Flow_Solution.hpp  Hierarchical_Structures.cpp  Hierarchical_Structures.hpp  Multizone_Interface_Connectivity.cpp  Multizone_Interface_Connectivity.hpp  cgnslib.h  connectivity_category.cpp  connectivity_category.hpp  creation.cpp  creation.hpp  elements_utils.cpp  elements_utils.hpp  labels.hpp  sids.hpp  utils.cpp  utils.hpp
cpp_cgns/sids/elements_utils/: faces.hpp
cpp_cgns/sids/example/: unstructured_base.cpp  unstructured_base.hpp
cpp_cgns/sids/test/: Grid_Coordinates_Elements_and_Flow_Solution.test.cpp  unstructured_base.test.cpp  utils.test.cpp
cpp_cgns/test/: cgns.test.cpp  cgns_allocation.test.cpp  cpp_cgns.test.cpp  cpp_cgns_utils.test.cpp  dispatch.test.cpp  node_manip.test.cpp  tree_manip.test.cpp
doc/: api.rst  conf.py  conf.py.in  cpp_cgns.md  index.rst  installation.rst  quick_start.rst  source_generated_documentation.rst  todo.rst  user_manual.rst
doc/__unused/: c_interop.rst  convensions.rst
doc/design_documents/: cpp_cgns_mapping.rst  design_documents.rst  development.rst
doc/releases/: release_notes.rst  v0.1.0.rst
doc/user_manual/: user_manual.rst
install/: CMakeLists.txt  run.sh
interop/: node_value_conversion.cpp  node_value_conversion.hpp  pycgns_converter.cpp
scripts/: install.sh  run.sh
scripts/cmake/: target_link_libraries_system.cmake
sids/: Building_Block_Structure_Definitions.cpp  Building_Block_Structure_Definitions.hpp  Hierarchical_Structures.cpp  Multizone_Interface_Connectivity.cpp  creation.hpp  elements_utils.py  labels.hpp  sids.hpp  utils.cpp
sids/test/: utils.test.cpp
test/: CMakeLists.txt  cgns_allocation.t.cpp  cpp_cgns.t.cpp  cpp_cgns_utils.t.cpp  cpp_cgns_utils.test.cpp
